--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches: [ "main" ]
 
+  workflow_dispatch:
+
 jobs:
   build:
 
@@ -17,6 +19,10 @@ jobs:
       with:
         node-version: 18.x
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - name: istall dependencies
+      run: npm install
+
+    - name: Run unit tests for aplication
+      run: npm run test:unit
+    - name: Display SoftUni username
+      run: echo "ivanmarinoff"
