--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -38,3 +38,23 @@ jobs:
           api-key: ${{ secrets.MY_RENDER_API_KEY }}
       - name: Wait for deploy
         run: sleep 60
+
+  run-test-ui:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.x
+          cache: 'npm'
+      - name: Install project dependencies
+        run: npm install
+
+      - name: Install Plawright
+        run: npx playwright install
+
+      - name: Run UI tests
+        run: npm run test:ui
